--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "iconv-lite": "^0.6.3",
+    "json2csv": "^6.0.0-alpha.2",
     "pdfkit": "^0.12.1"
   }
 }
